backend_kube_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: us-aesthetic-storyservice-deployment
  labels:
    app: us-aesthetic-storyservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: us-aesthetic-storyservice
  template:
    metadata:
      labels:
        app: us-aesthetic-storyservice
    spec:
      containers:
      - name: us-aesthetic-storyservice-container
        image: docker.io/library/us-aesthetic-storyservice:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "0.25"
            memory: "256Mi"
          requests:
            cpu: "0.25"
            memory: "256Mi"
